--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </main>
   </div>
   <form class="popup">
-    <button class="Close"><img class="close__pic" src="./images/CloseIcon.png" alt="Крестик"></button>
+    <button class="Close"><img class="Close__pic" src="./images/CloseIcon.png" alt="Крестик"></button>
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <div class="popup__about">
