--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/Vector.png" alt="Место Россия">
+      <img class="header__logo" src="./images/Vector.svg" alt="Место Россия">
     </header>
     <main class="content">
       <div class="profile">
@@ -20,76 +20,77 @@
         <div class="name">
           <div class="name__block">
             <h1 class="name__title">Жак-Ив Кусто</h1>
-            <button class="editbutton"></button>
+            <button type="button" class="name__editbutton"></button>
           </div>
           <p class="name__subtitle">Исследователь океана</p>
         </div>
 
-        <button class="addbutton"></button>
+        <button type="button" class="profile__addbutton"></button>
       </div>
-      <ul class="photo">
-        <li class="photo__list">
-          <img class="photo__greed" src="./images/karachev1.png" alt="карачев 1">
-          <div class="photo__blok">
-            <h2 class="photo__title">Карачаевск</h2>
-            <img class="heartbutton" src="./images/heart.png" alt="сердце">
+      <section class="photo">
+      <ul class="cards">
+        <li class="card">
+          <img class="card__greed" src="./images/karachev1.png" alt="карачев 1">
+          <div class="card__blok">
+            <h2 class="card__title">Карачаевск</h2>
+            <button type="button" class="card__heartbutton"></button>
           </div>
         </li>
-        <li class="photo__list">
-          <img class="photo__greed" src="./images/zakat.png" alt="закат">
-          <div class="photo__blok">
-            <h2 class="photo__title">Гора Эльбрус</h2>
-            <img class="heartbutton" src="./images/heart.png" alt="сердце">
+        <li class="card">
+          <img class="card__greed" src="./images/zakat.png" alt="закат">
+          <div class="card__blok">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button type="button" class="card__heartbutton"></button>
+        </li>
+        <li class="card">
+          <img class="card__greed" src="./images/les.png" alt="лес">
+          <div class="card__blok">
+            <h2 class="card__title">Домбай</h2>
+            <button type="button" class="card__heartbutton"></button>
           </div>
         </li>
-        <li class="photo__list">
-          <img class="photo__greed" src="./images/les.png" alt="лес">
-          <div class="photo__blok">
-            <h2 class="photo__title">Домбай</h2>
-            <img class="heartbutton" src="./images/heart.png" alt="сердце">
+        <li class="card">
+          <img class="card__greed" src="./images/zakat.png" alt="закат">
+          <div class="card__blok">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button type="button" class="card__heartbutton"></button>
           </div>
         </li>
-        <li class="photo__list">
-          <img class="photo__greed" src="./images/zakat.png" alt="закат">
-          <div class="photo__blok">
-            <h2 class="photo__title">Гора Эльбрус</h2>
-            <img class="heartbutton" src="./images/heart.png" alt="сердце">
+        <li class="card">
+          <img class="card__greed" src="./images/pik.png" alt="пик">
+          <div class="card__blok">
+            <h2 class="card__title">Домбай</h2>
+            <button type="button" class="card__heartbutton"></button>
           </div>
         </li>
-        <li class="photo__list">
-          <img class="photo__greed" src="./images/pik.png" alt="пик">
-          <div class="photo__blok">
-            <h2 class="photo__title">Домбай</h2>
-            <img class="heartbutton" src="./images/heart.png" alt="сердце">
-          </div>
-        </li>
-        <li class="photo__list">
-          <img class="photo__greed" src="./images/karachev2.png" alt="карачев 2">
-          <div class="photo__blok">
-            <h2 class="photo__title">Карачаево-Черкессия</h2>
-            <img class="heartbutton" src="./images/heart.png" alt="сердце">
+        <li class="card">
+          <img class="card__greed" src="./images/karachev2.png" alt="карачев 2">
+          <div class="card__blok">
+            <h2 class="card__title">Карачаево-Черкессия</h2>
+            <button type="button" class="card__heartbutton"></button>
           </div>
         </li>
       </ul>
-      <footer class="footer">
-        <h2 class="footer__text">&copy; 2022 Mesto Russia</h2>
-      </footer>
+    </section>
     </main>
+    <footer class="footer">
+      <h2 class="footer__text">&copy; 2022 Mesto Russia</h2>
+    </footer>
   </div>
   <form class="popup">
-    <button class="Close"><img class="Close__pic" src="./images/CloseIcon.png" alt="Крестик"></button>
+    <button type="button" class="popup__close"><img class="popup__pic" src="./images/CloseIcon.svg" alt="Крестик"></button>
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <div class="popup__about">
-        <input type="text" class="popup__kusto" maxlength="22">
-        <input type="text" class="popup__text" maxlength="22">
+        <input type="text" name="name" class="popup__input popup__input_text" maxlength="22">
+        <input type="text"  name="about" class="popup__input popup__input_kusto" maxlength="22">
       </div>
-      <button class="savebutton" type="submit">
-        <span class="savebutton__color">Сохранить</span>
+      <button class="popup__savebutton" type="submit">
+        <span class="popup__color">Сохранить</span>
       </button>
     </div>
   </form>
-  <script src="index.js"></script>
+  <script src="./script/index.js"></script>
 </body>
 
 </html>
