--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <div class="card__blok">
             <h2 class="card__title">Гора Эльбрус</h2>
             <button type="button" class="card__heartbutton"></button>
+          </div>
         </li>
         <li class="card">
           <img class="card__greed" src="./images/les.png" alt="лес">
