--- a/index.html
+++ b/index.html
@@ -28,67 +28,66 @@
         <button type="button" class="profile__addbutton"></button>
       </div>
       <section class="photo">
-      <ul class="cards">
-        <li class="card">
-          <img class="card__greed" src="./images/karachev1.png" alt="карачев 1">
-          <div class="card__blok">
-            <h2 class="card__title">Карачаевск</h2>
-            <button type="button" class="card__heartbutton"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__greed" src="./images/zakat.png" alt="закат">
-          <div class="card__blok">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="card__heartbutton"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__greed" src="./images/les.png" alt="лес">
-          <div class="card__blok">
-            <h2 class="card__title">Домбай</h2>
-            <button type="button" class="card__heartbutton"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__greed" src="./images/zakat.png" alt="закат">
-          <div class="card__blok">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button type="button" class="card__heartbutton"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__greed" src="./images/pik.png" alt="пик">
-          <div class="card__blok">
-            <h2 class="card__title">Домбай</h2>
-            <button type="button" class="card__heartbutton"></button>
-          </div>
-        </li>
-        <li class="card">
-          <img class="card__greed" src="./images/karachev2.png" alt="карачев 2">
-          <div class="card__blok">
-            <h2 class="card__title">Карачаево-Черкессия</h2>
-            <button type="button" class="card__heartbutton"></button>
-          </div>
-        </li>
-      </ul>
-    </section>
+        <ul class="cards">
+          <li class="card">
+            <img class="card__greed" src="./images/karachev1.png" alt="карачев 1">
+            <div class="card__blok">
+              <h2 class="card__title">Карачаевск</h2>
+              <button type="button" class="card__heartbutton"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__greed" src="./images/zakat.png" alt="закат">
+            <div class="card__blok">
+              <h2 class="card__title">Гора Эльбрус</h2>
+              <button type="button" class="card__heartbutton"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__greed" src="./images/les.png" alt="лес">
+            <div class="card__blok">
+              <h2 class="card__title">Домбай</h2>
+              <button type="button" class="card__heartbutton"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__greed" src="./images/zakat.png" alt="закат">
+            <div class="card__blok">
+              <h2 class="card__title">Гора Эльбрус</h2>
+              <button type="button" class="card__heartbutton"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__greed" src="./images/pik.png" alt="пик">
+            <div class="card__blok">
+              <h2 class="card__title">Домбай</h2>
+              <button type="button" class="card__heartbutton"></button>
+            </div>
+          </li>
+          <li class="card">
+            <img class="card__greed" src="./images/karachev2.png" alt="карачев 2">
+            <div class="card__blok">
+              <h2 class="card__title">Карачаево-Черкессия</h2>
+              <button type="button" class="card__heartbutton"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <h2 class="footer__text">&copy; 2022 Mesto Russia</h2>
     </footer>
   </div>
   <form class="popup">
-    <button type="button" class="popup__close"><img class="popup__pic" src="./images/CloseIcon.svg" alt="Крестик"></button>
+    <button type="button" class="popup__close"><img class="popup__pic" src="./images/CloseIcon.svg"
+        alt="Крестик"></button>
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <div class="popup__about">
         <input type="text" name="name" class="popup__input popup__input_text" maxlength="22">
-        <input type="text"  name="about" class="popup__input popup__input_kusto" maxlength="22">
+        <input type="text" name="about" class="popup__input popup__input_kusto" maxlength="22">
       </div>
-      <button class="popup__savebutton" type="submit">
-        <span class="popup__color">Сохранить</span>
-      </button>
+      <button class="popup__savebutton" type="submit">Сохранить</button>
     </div>
   </form>
   <script src="./script/index.js"></script>
