--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <div class="popup__about">
         <input type="text" name="name" class="popup__input popup__input_text" maxlength="22">
-        <input type="text" name="about" class="popup__input popup__input_kusto" maxlength="22">
+        <input type="text" name="firstname" class="popup__input popup__input_kusto" maxlength="22">
       </div>
       <button class="popup__savebutton" type="submit">Сохранить</button>
     </div>
