--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="./images/zakat v pole.jpg" alt="закат">
+            <img class="card__image" src="./images/zakatpole.jpg" alt="закат">
             <div class="card__blok">
               <h2 class="card__title">Гора Эльбрус</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
@@ -51,7 +51,7 @@
             </div>
           </li>
           <li class="card">
-            <img class="card__image" src="./images/zakat v pole.jpg" alt="закат">
+            <img class="card__image" src="./images/zakatpole.jpg" alt="закат">
             <div class="card__blok">
               <h2 class="card__title">Гора Эльбрус</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
