--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
         <ul class="cards">
           <li class="card">
             <img class="card__image" src="./images/karachev1.jpg" alt="карачев 1">
-            <div class="card__blok">
+            <div class="card__block">
               <h2 class="card__title">Карачаевск</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/zakatpole.jpg" alt="закат">
-            <div class="card__blok">
+            <div class="card__block">
               <h2 class="card__title">Гора Эльбрус</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/les.jpg" alt="лес">
-            <div class="card__blok">
+            <div class="card__block">
               <h2 class="card__title">Домбай</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/zakatpole.jpg" alt="закат">
-            <div class="card__blok">
+            <div class="card__block">
               <h2 class="card__title">Гора Эльбрус</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/pik.jpg" alt="пик">
-            <div class="card__blok">
+            <div class="card__block">
               <h2 class="card__title">Домбай</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/karachev1.jpg" alt="карачев 2">
-            <div class="card__blok">
+            <div class="card__block">
               <h2 class="card__title">Карачаево-Черкессия</h2>
               <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
             </div>
@@ -75,16 +75,16 @@
       </section>
     </main>
     <footer class="footer">
-      <h2 class="footer__text">&copy; 2022 Mesto Russia</h2>
+      <p class="footer__text">&copy; 2022 Mesto Russia</p>
     </footer>
   </div>
   <div class="popup">
-    <button type="button" class="popup__close-button" aria-label="закрыть"></button>
     <div class="popup__container">
+      <button type="button" class="popup__close-button" aria-label="закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form name="name" class="popup__about">
-        <input type="text" name="name" class="popup__input popup__input_name">
-        <input type="text" name="about" class="popup__input popup__input_about">
+        <input type="text" name="name" class="popup__input popup__input_type_name">
+        <input type="text" name="about" class="popup__input popup__input_type_about">
         <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
       </form>
     </div>
