--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="popup__container">
       <button type="button" class="popup__close-button" aria-label="закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form name="name" class="popup__about">
+      <form name="name" class="popup__form">
         <input type="text" name="name" class="popup__input popup__input_type_name">
         <input type="text" name="about" class="popup__input popup__input_type_about">
         <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
