--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@
             <img class="card__image" src="./images/karachev1.jpg" alt="карачев 1">
             <div class="card__block">
               <h2 class="card__title">Карачаевск</h2>
-              <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
+              <button type="button" class="card__like-button" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/zakatpole.jpg" alt="закат">
             <div class="card__block">
               <h2 class="card__title">Гора Эльбрус</h2>
-              <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
+              <button type="button" class="card__like-button" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/les.jpg" alt="лес">
             <div class="card__block">
               <h2 class="card__title">Домбай</h2>
-              <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
+              <button type="button" class="card__like-button" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/zakatpole.jpg" alt="закат">
             <div class="card__block">
               <h2 class="card__title">Гора Эльбрус</h2>
-              <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
+              <button type="button" class="card__like-button" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/pik.jpg" alt="пик">
             <div class="card__block">
               <h2 class="card__title">Домбай</h2>
-              <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
+              <button type="button" class="card__like-button" aria-label="лайк"></button>
             </div>
           </li>
           <li class="card">
             <img class="card__image" src="./images/karachev1.jpg" alt="карачев 2">
             <div class="card__block">
               <h2 class="card__title">Карачаево-Черкессия</h2>
-              <button type="button" class="card__like-button card__like-button_active" aria-label="лайк"></button>
+              <button type="button" class="card__like-button" aria-label="лайк"></button>
             </div>
           </li>
         </ul>
