--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <ul class="cards">
           <template class="template">
             <li class="card">
-              <button type="button" class="card__delete-button" aria-label="корзина"></button>
               <img class="card__image" alt="карачев 1">
+              <button type="button" class="card__delete-button" aria-label="корзина"></button>
               <div class="card__block">
                 <h2 class="card__title"></h2>
                 <button type="button" class="card__like-button" aria-label="лайк"></button>
@@ -52,8 +52,8 @@
       <button type="button" class="popup__close-button" aria-label="закрыть"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form name="name" class="popup__form">
-        <input type="text" name="name" class="popup__input popup__input_type_name">
-        <input type="text" name="about" class="popup__input popup__input_type_about">
+        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
+        <input type="text" name="about" class="popup__input popup__input_type_about" placeholder="Профессия">
         <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
       </form>
     </div>
@@ -77,6 +77,7 @@
       <h2 class="popup__image-title"></h2>
     </div>
   </div>
+  <script src="./script/cards.js"></script>
   <script src="./script/index.js"></script>
 </body>
 
