--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="cards">
           <template class="template">
             <li class="card">
-              <img class="card__image" alt="карачев 1">
+              <img class="card__image">
               <button type="button" class="card__delete-button" aria-label="корзина"></button>
               <div class="card__block">
                 <h2 class="card__title"></h2>
@@ -73,7 +73,7 @@
   <div class="popup popup_type_image">
     <div class="popup__image">
       <button type="button" class="popup__close-button popup__close-button_type_exit" aria-label="закрыть"></button>
-      <img class="popup__image-picture" alt="карачев 1">
+      <img class="popup__image-picture">
       <h2 class="popup__image-title"></h2>
     </div>
   </div>
