--- a/index.html
+++ b/index.html
@@ -48,35 +48,59 @@
     </footer>
   </div>
   <div class="popup">
-    <div class="popup__container">
-      <button type="button" class="popup__close-button" aria-label="закрыть"></button>
-      <h2 class="popup__title">Редактировать профиль</h2>
-      <form name="name" class="popup__form">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-        <input type="text" name="about" class="popup__input popup__input_type_about" placeholder="Профессия">
-        <button class="popup__save-button" type="submit" aria-label="сохранить">Сохранить</button>
-      </form>
+    <div class="popup__overlay">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button" aria-label="закрыть"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form novalidate name="name" class="popup__form">
+          <label for="name" class="input-container">
+            <input id="name" type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя"
+              required minlength="2" maxlength="40">
+            <span class="name-error error"></span>
+          </label>
+          <label for="text" class="input-container">
+            <input id="text" type="text" name="about" class="popup__input popup__input_type_about"
+              placeholder="Профессия" required minlength="2" maxlength="200">
+            <span class="text-error error"></span>
+          </label>
+          <button id="popup__save-button" class="popup__save-button" type="submit"
+            aria-label="сохранить">Сохранить</button>
+        </form>
+      </div>
     </div>
   </div>
   <div class="popup popup_type_create">
-    <div class="popup__container">
-      <button type="button" class="popup__close-button popup__close-button_type_close" aria-label="закрыть"></button>
-      <h2 class="popup__title">Новое место</h2>
-      <form name="name" class="popup__form popup__form_type_create">
-        <input type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название">
-        <input type="text" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
-        <button class="popup__save-button popup__save-button_type_create" type="submit"
-          aria-label="сохранить">Создать</button>
-      </form>
+    <div class="popup__overlay">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button popup__close-button_type_close" aria-label="закрыть"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form novalidate name="name" class="popup__form popup__form_type_create">
+          <label class="input-container">
+            <input id="title" type="text" name="title" class="popup__input popup__input_type_title"
+              placeholder="Название" required minlength="2" maxlength="30">
+            <span class="title-error error"></span>
+          </label>
+          <label class="input-container">
+            <input id="url" type="url" name="link" class="popup__input popup__input_type_link"
+              placeholder="Ссылка на картинку" required>
+            <span class="url-error error"></span>
+          </label>
+          <button id="popup__create-button" class="popup__save-button popup__save-button_type_create" type="submit"
+            aria-label="сохранить">Создать</button>
+        </form>
+      </div>
     </div>
   </div>
   <div class="popup popup_type_image">
-    <div class="popup__image">
-      <button type="button" class="popup__close-button popup__close-button_type_exit" aria-label="закрыть"></button>
-      <img class="popup__image-picture">
-      <h2 class="popup__image-title"></h2>
+    <div class="popup__overlay">
+      <div class="popup__image">
+        <button type="button" class="popup__close-button popup__close-button_type_exit" aria-label="закрыть"></button>
+        <img class="popup__image-picture">
+        <h2 class="popup__image-title"></h2>
+      </div>
     </div>
   </div>
+  <script src="./script/validate.js"></script>
   <script src="./script/cards.js"></script>
   <script src="./script/index.js"></script>
 </body>
